--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "file-saver": "^2.0.5",
     "firebase": "^11.9.1",
     "genkit": "^1.14.1",
+    "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
     "next-themes": "^0.3.0",
