--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nextn",
-  "version": "1.0.0-beta",
+  "version": "1.0.0-alpha",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
